--- a/abc_dbt/dbt_project.yml
+++ b/abc_dbt/dbt_project.yml
@@ -19,9 +19,11 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
+target-path: "target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
+  - "logs"
 
 
 # Configuring models
@@ -32,6 +34,19 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   abc_dbt:
-    # Config indicated by + and applies to all files under models/example/
-    example:
+    1_staging:
+      +materialized: table
+      +tags:
+        - staging
+    2_transform:
       +materialized: view
+      +tags:
+        - transform
+    3_dimensions:
+      +materialized: view
+      +tags:
+        - dimensions
+    4_facts:
+      +materialized: table
+      +tags:
+        - facts
